updates to create resume lwc. Updates to package.xml and added tabs and fields to the project folder to fix deployment issues.

--- a/force-app/main/default/pages/BYROS_ResumeAsPDF.page
+++ b/force-app/main/default/pages/BYROS_ResumeAsPDF.page
@@ -1,5 +1,4 @@
-<apex:page
-    standardController="Resume__c"
+<apex:page standardController="Resume__c"
     extensions="BYROS_ResumePDFController"
     renderAs="pdf"
     showHeader="false"
