--- a/force-app/main/default/aura/CreateEditResumeOverrideAura/CreateEditResumeOverrideAura.cmp
+++ b/force-app/main/default/aura/CreateEditResumeOverrideAura/CreateEditResumeOverrideAura.cmp
@@ -2,9 +2,15 @@
 to direct users to the lwc createresume. If the action is Edit Resume, it will pass the 
 Id of the Resume__c record to the createresume lwc.
 -->
-<aura:component implements="lightning:actionOverride,lightning:isUrlAddressable,flexipage:availableForAllPageTypes"
-                access="global">
+<aura:component implements="lightning:actionOverride,
+                            lightning:isUrlAddressable,
+                            flexipage:availableForAllPageTypes"
+                    access="global">
+
+    <aura:attribute name="recordId" type="Id"/>
+    
     <aura:attribute name="pageReference" type="Object"/>
+
     <lightning:navigation aura:id="nav"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 </aura:component>
